Replace MaterialDrawer with standard DrawerLayout
- Remove com.mikepenz:materialdrawer dependency entirely
- Replace Drawer/DrawerBuilder with androidx.drawerlayout.widget.DrawerLayout
- Update sheet_music_layout.xml: wrap content in DrawerLayout with right-side drawer
- Create settings_drawer.xml: scrollable settings panel with plain Switch widgets
- Update styles.xml: PlayerTheme now uses android:Theme.Material.NoActionBar
  (SheetMusicActivity cannot extend AppCompatActivity due to USB MIDI driver
  inheritance chain), AppTheme uses Theme.AppCompat.Light.NoActionBar
- Add DrawerSwitchItem/DrawerClickItem/DrawerItemText/DrawerMenuText styles
- Update MidiPlayer.java: replace Drawer field with DrawerLayout, update
  setDrawer() -> setDrawerLayout(), open drawer via GravityCompat.END
- Rewrite SheetMusicActivity.java: wire up drawer views manually, use
  startActivityForResult (registerForActivityResult requires ComponentActivity),
  replace setSystemUiVisibility with WindowInsetsControllerCompat, fix
  saveAsImages to use MediaStore on Android 10+
- Update SettingsActivity.java: replace deprecated onBackPressed() with
  OnBackPressedCallback via getOnBackPressedDispatcher()
- Delete drawerItems package (AbstractExpandableSwitchDrawerItem.kt,
  ExpandableSwitchDrawerItem.kt) and drawer_item_expandable_switch.xml
- Remove drawer_item_expandable_switch id from ids.xml

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

Co-authored-by: drake7707 <5351764+drake7707@users.noreply.github.com>